--- a/checkin/views/sample.html
+++ b/checkin/views/sample.html
@@ -4,7 +4,7 @@
 
 <h1>Sample Checkin</h1>
 {% if slug == None %}
-<h2> This page cannot be used without a deployment. Please visit this page for a specific deployment </h2>
+<h2> This page cannot be used without a fair. Please visit this page for a specific deployment </h2>
 {% endif %}
 
 {% if complete == 'false' and slug != None %}
