working on file uploading

--- a/checkin/views/student.html
+++ b/checkin/views/student.html
@@ -7,7 +7,7 @@
 <h3><a href="{{ student_link }}" target="_blank">{{ student_link_text }}</a></h3>
 {% endif %}
 
-{% if raffle_entries >= max_raffle_entries %}
+{% if raffle_entries >= max_raffle_entries and max_raffle_entries != 0 %}
 <h2>Congratulations! You have received the maximum raffle entries allowed for this event. Good Luck!</h2>
 {% else %}
 <h2>You still have some checkins before you receive the maximum raffle entries allowed for this event.</h2>
