--- a/checkin/views/users_index.html
+++ b/checkin/views/users_index.html
@@ -50,7 +50,7 @@
 <h2> Add Bulk Users </h2>
 <h4>You can upload users in bulk using a file upload</h4>
 <h4>Note: Upload files should be CSV formatted with a header row</h4>
-<h4>Header Row Example: Username,VendorName,Password,Admin,Deployment_Slug </h4>
+<h4>Header Row Example: Display Name, Username, VendorName, Category, Password, Admin, Deployment_Slug </h4>
 <form enctype="multipart/form-data" action="/users" method="post">
     <label for="filename">Filename</label>
     <input id="bulkfile" type="file" name="bulkfile" />
