--- a/checkin/views/admin.html
+++ b/checkin/views/admin.html
@@ -177,7 +177,7 @@ badge.</h3>
     <h3>Each booth should have a single booth account shared between all of the exhibitors
      working at that booth.</h3>
      <h4>Note: Upload files should be CSV formatted with a header row</h4>
-     <h4>Header Row Example: Username,VendorName,Password,Admin </h4>
+     <h4>Header Row Example: DisplayName,Username,Category,VendorName,Password,Admin </h4>
 
     <button type="button" class="btn btn-primary navbar-btn btn-lg" data-toggle="modal" data-target="#addBoothModal">Create New Booth</button>
 
@@ -517,14 +517,21 @@ badge.</h3>
 
 
     <BR>
-    <div class="col-sm-10">
-      <h3>And the winner is...</h3>
-      <h1>{{random_visitor}}</h1>
+      <!-- <h2>Reset Raffle Entries</h2>
+      <h6>This will recalculate the raffle entries for the updated rules. Use this if you change the checkin rules midway through</h6>
       <form action="admin" method="POST">
-          <input type='hidden' name='method' value='RANDOM_VISITOR'>
-          <button type="submit" class="btn btn-primary btn-lg">Draw Another Winner</button>
-      </form>
-    </div>
+          <input type='hidden' name='method' value='RESET_RAFFLE_ENTRIES'>
+          <button type="submit" class="btn btn-primary btn-lg">Reset Entries</button>
+      </form> -->
+    <BR>
+    <h2>Pick a winner</h2>
+    <form action="admin" method="POST">
+        <input type='hidden' name='method' value='RANDOM_VISITOR'>
+        <button type="submit" class="btn btn-primary btn-lg">Draw Another Winner</button>
+    </form>
+    <h3>And the winner is...</h3>
+    <h1>{{random_visitor}}</h1>
+
 </div>
 <div class="tab-pane container" id="analytics">
   <a class="btn btn-primary navbar-btn" href="dump_checkins_csv" target="_blank">Download Raw Checkin Data</a>
